--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "SQA06 web automation framework",
   "dependencies": {
-    "webdriverio": "4.7.1",
-    "selenium-standalone": "5.9.0",
-    "chai": "4.1.2",
+    "chai": "^4.1.2",
+    "cucumber": "^4.0.0",
     "mocha": "5.0.0",
-    "cucumber": "4.0.0"
+    "selenium-standalone": "^5.9.0",
+    "webdriverio": "^4.12.0"
   },
   "scripts": {
     "test": "mocha"
   },
   "devDependencies": {
-    "cucumber-html-reporter": "4.0.2"
+    "cucumber-html-reporter": "^4.0.2"
   }
 }
